# nemesis-eval

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BUILD_SPEC.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  nemesis-check.yml  release-testpypi.yml  release.yml  scorecard.yml
data/: failure_modes.yaml
src/nemesis/: __init__.py  __main__.py  catalog.py  collect.py  eval.py  models.py  report.py  test_agent.py
src/nemesis/detectors/: __init__.py  agent_output_not_tied_to_exact_repo_state.py  artifact_presence_not_verified.py  base.py  branch_cleanup_not_verified.py  declared_success_too_early.py  dirty_worktree_after_closeout.py  github_merge_treated_as_full_success.py  hot_file_conflict_risk.py  incomplete_implementation_prompts.py  local_status_ignored_before_next_phase.py  missing_root_doctrine_updates.py  old_session_folders_leaking_files.py  patch_vs_new_build_confusion.py  repo_drift_after_merge.py  skill_bloat.py  source_of_truth_ambiguity_across_tools.py  stale_local_checkout_treated_as_current.py  testing_without_source_verification.py  unsafe_audit_probing_language_in_prompts.py  untracked_files_appearing_unexpectedly.py  workflow_drift_across_tools.py
tests/: test_agent.py  test_catalog.py  test_collect.py  test_eval.py  test_report.py  test_smoke.py
tests/detectors/: test_declared_success_too_early.py  test_detector_contracts.py
