[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nemesis"
version = "0.1.0"
description = "Python evaluation harness for agentic failure modes."
requires-python = ">=3.11"
authors = [
    { name = "Luis Betancourt", email = "therealonslaughtgaming@gmail.com" },         
]
license = "MIT"
readme = "README.md"
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "black>=23.0",
    "pre-commit>=3.0",
]

[project.scripts]
nemesis = "nemesis.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]